tests/specs/ecosystem/bureaudouble/outils/0_0_42.test
bureaudouble/outils/0.0.42
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'Document'.
const getDocument: () => Document = {} as never;
                         ~~~~~~~~
    at file://<tmpdir>/convertToPlain.ts:1:26

TS2304 [ERROR]: Cannot find name 'DOMParserSupportedType'.
  mimeType?: DOMParserSupportedType;
             ~~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/createVirtualNode.ts:4:14

TS2536 [ERROR]: Type '0' cannot be used to index type 'InferResult<T>'.
export type QueryFunction<V> = <T extends CompiledQuery<unknown>>(fn: (qb: Kysely<V>) => T) => Promise<InferResult<T>[0][]>;
                                                                                                       ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/database/sqlite/createQueryFunction.ts:7:104

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export const partialTrigger = (node: HTMLElement, {}: {
                                     ~~~~~~~~~~~
    at file://<tmpdir>/fresh/createPartial.ts:1:38

Found 4 errors.

